# nanoburngpt

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPER.md  Dockerfile  README.md  run_cloud.sh
artifacts/: config.json
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-03-23-multi-dataset-presets-bpe.md
docs/superpowers/specs/: 2026-03-23-multi-dataset-presets-bpe-design.md  2026-03-23-nanogpt-parity-cuda-design.md
src/: data.rs  datasets.rs  inference.rs  lib.rs  main.rs  model.rs  presets.rs  train.rs
