[package]
name = "nanoburngpt"
version = "0.1.0"
edition = "2024"

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]

[dependencies]
anyhow = "1.0.102"
burn = { version = "0.20.1", features = ["train", "tui"] }
clap = { version = "4.6.0", features = ["derive"] }
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
